RESOLVED FIXED109196
REGRESSION(r142003): Duplicate “Unknown” strings in LocalizedStrings.cpp not distinguished by key
https://bugs.webkit.org/show_bug.cgi?id=109196
Summary REGRESSION(r142003): Duplicate “Unknown” strings in LocalizedStrings.cpp not ...
Jessie Berlin
Reported 2013-02-07 08:34:12 PST
This was introduced in http://trac.webkit.org/changeset/142003 and is causing errors when updating Localizable.strings.
Attachments
Patch (2.91 KB, patch)
2013-02-07 09:00 PST, Jessie Berlin
no flags
Jessie Berlin
Comment 1 2013-02-07 09:00:19 PST
Jessie Berlin
Comment 2 2013-02-07 10:15:43 PST
Note You need to log in before you can comment on or make changes to this bug.