REGRESSION(r142003): Duplicate "Unknown" strings in LocalizedStrings.cpp not distinguished by key https://bugs.webkit.org/show_bug.cgi?id=109196

Reviewed by Eric Carlson.

* English.lproj/Localizable.strings:
Updated for the changes.
* platform/LocalizedStrings.cpp:
(WebCore::unknownFileSizeText):
Add a key.
(WebCore::textTrackNoLabelText):
Ditto.

Canonical link: https://commits.webkit.org/127392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142147 268f45cc-cd09-0410-ab3c-d52691b4dbfc