Source/WebCore/platform/LocalizedStrings.cpp
@@ -705,7 +705,7 @@ String multipleFileUploadText(unsigned numberOfFiles)
 
 String unknownFileSizeText()
 {
-    return WEB_UI_STRING("Unknown", "Unknown filesize FTP directory listing item");
+    return WEB_UI_STRING_KEY("Unknown", "Unknown (filesize)", "Unknown filesize FTP directory listing item");
 }
 
 #if PLATFORM(WIN)
@@ -1027,7 +1027,7 @@ String textTrackOffText()
 
 String textTrackNoLabelText()
 {
-    return WEB_UI_STRING("Unknown", "Menu item label for a closed captions track that has no other name");
+    return WEB_UI_STRING_KEY("Unknown", "Unknown (closed captions track)", "Menu item label for a closed captions track that has no other name");
 }
 #endif
 
